--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,3 +3,9 @@ items:
     name: Home
   - link: /practice-areas.html
     name: Practice Areas
+  - link: /about-us.html
+    name: About Us
+  - link: /testimonials.html
+    name: Testimonials
+  - link: /faq.html
+    name: FAQ
