--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-name: Peña Ramas Law 
+name: Ramas Law 
 description: Injury Attorney South Florida
 meta_description: "Injury Attorney South Florida"
 logo: ''
